# WebBackendSwitch

./: .replit  ENVIRONMENT_SETUP.md  ESTIMATES.MD  LICENSE  ORIGINALREADME.md  PRD.MD  PRD2.MD  PRD3.MD  README.md  README2.MD  RETRO.md  SECURITYRECOMMENDATIONS.MD  SECURITYREPORT.MD  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted-original-prompt-at-the-start-create-a-sample-app-with-multiple-web-backends-that-can-run-side-1738142644344.txt  Pasted-original-prompt-at-the-start-create-a-sample-app-with-multiple-web-backends-that-can-run-side-by-1738183114805.txt
client/src/: App.tsx
client/src/pages/: home.tsx
client/src/pages/service-a/: users.tsx  verify.tsx
client/src/pages/service-b/: posts.tsx
client/src/pages/service-c/: calculator.tsx
server/: index.ts  routes.ts
services/graphql/src/: resolvers.ts  schema.ts  server.ts  types.ts
services/service-a/src/: main.py  models.py  routes.py  users.sqlite
services/service-a/tests/: conftest.py  test_models.py
services/service-b/: jest.config.ts  posts.sqlite
services/service-b/src/: models.ts  routes.ts  server.ts
services/service-b/tests/: models.test.ts  setup.ts
services/service-c/: service-c.sln
services/service-c/ServiceC.Api/: Program.cs  ServiceC.Api.csproj  WeatherForecast.cs
services/service-c/ServiceC.Business/: Class1.cs
services/service_a/: __init__.py  conftest.py  pytest.ini
services/service_a/src/: __init__.py  main.py  models.py  routes.py
services/service_a/tests/: conftest.py  pytest.ini  test_models.py  test_routes.py
(+7 files in other folders)
