[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.0.0",
]
